crates/plotnik-lib/tests/02-parser/recovery_validation/ref_with_predicate.txt
Expr = (identifier)
Q = (Expr == "foo")
------------------ DIAGNOSTICS -------------------
error: expected a child node, or `)` to close
 --> query.ptk:2:11
  |
2 | Q = (Expr == "foo")
  |           ^^
